@@ -14,3 +14,7 @@ patternlab.json
 .sass-cache/*
 /sass-cache
 source/images/Thumbs.db
+public/styleguide/css/static.css.map
+public/styleguide/css/styleguide-specific.css.map
+public/styleguide/css/styleguide.css.map
+source/css/style.css.map
